--- a/index.html
+++ b/index.html
@@ -48,17 +48,32 @@
         <aside class="timeline-summary">
           <div class="summary-card">
             <p class="eyebrow">Latest writing</p>
-            <h3>Explore the thinking behind the work</h3>
-            <p class="muted">Notes on systems, motion, and building expressive products. Swap these URLs with your own posts.</p>
+            <h3>Ideas I keep revisiting</h3>
+            <p class="muted">Drop in your own links and blurbs to keep visitors close to your thinking.</p>
             <div class="blog-links">
-              <a class="blog-link" href="https://example.com/blog/motion-systems" target="_blank" rel="noreferrer noopener">
-                Motion systems for bold brands
+              <a class="blog-card" href="https://example.com/blog/motion-systems" target="_blank" rel="noreferrer noopener">
+                <div class="blog-meta">
+                  <span class="badge">Motion & systems</span>
+                  <span class="arrow">↗</span>
+                </div>
+                <p class="blog-title">Scoring expressive hero motion</p>
+                <p class="blog-desc">How I choreograph gradients, parallax, and easing without hurting performance.</p>
               </a>
-              <a class="blog-link" href="https://example.com/blog/design-handoff" target="_blank" rel="noreferrer noopener">
-                Smoother design-to-dev handoff
+              <a class="blog-card" href="https://example.com/blog/design-handoff" target="_blank" rel="noreferrer noopener">
+                <div class="blog-meta">
+                  <span class="badge">Product craft</span>
+                  <span class="arrow">↗</span>
+                </div>
+                <p class="blog-title">Design-to-dev handoff that actually lands</p>
+                <p class="blog-desc">Reusable specs, tokens, and rituals that keep teams building the same story.</p>
               </a>
-              <a class="blog-link" href="https://example.com/blog/creative-dev" target="_blank" rel="noreferrer noopener">
-                Creative coding without the bloat
+              <a class="blog-card" href="https://example.com/blog/creative-dev" target="_blank" rel="noreferrer noopener">
+                <div class="blog-meta">
+                  <span class="badge">Creative coding</span>
+                  <span class="arrow">↗</span>
+                </div>
+                <p class="blog-title">Minimal stacks for playful web scenes</p>
+                <p class="blog-desc">Lessons from shipping lean, animation-heavy sites without bloat.</p>
               </a>
             </div>
           </div>
@@ -77,28 +92,6 @@
       </div>
     </section>
 
-    <section class="contact" id="contact">
-      <div>
-        <p class="eyebrow">Next</p>
-        <h2>Let’s build something intentional</h2>
-        <p class="muted">Tell me about the experience you want to craft. I’ll reply with ideas, timelines, and a collaborative plan.</p>
-      </div>
-      <form class="contact-form">
-        <label>
-          Name
-          <input type="text" name="name" placeholder="Your name" required />
-        </label>
-        <label>
-          Email
-          <input type="email" name="email" placeholder="you@example.com" required />
-        </label>
-        <label>
-          Project vision
-          <textarea name="vision" rows="3" placeholder="What are you hoping to build?" required></textarea>
-        </label>
-        <button class="btn primary" type="submit">Send message</button>
-      </form>
-    </section>
   </main>
 
   <footer class="footer">
