Update blog card content and styles

--- a/index.html
+++ b/index.html
@@ -49,28 +49,28 @@
           <div class="summary-card">
             <p class="eyebrow">Latest writing</p>
             <h3>Ideas I keep revisiting</h3>
-            <p class="muted">Drop in your own links and blurbs to keep visitors close to your thinking.</p>
+            <p class="muted">Swap in your own URL, title, and short blurb. The darker overlays keep every headline readable.</p>
             <div class="blog-links">
-              <a class="blog-card" href="https://example.com/blog/motion-systems" target="_blank" rel="noreferrer noopener">
+              <a class="blog-card" style="--bg:url('https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&w=900&q=80')" href="https://example.com/blog/motion-systems" target="_blank" rel="noreferrer noopener">
                 <div class="blog-meta">
-                  <span class="badge">Motion & systems</span>
-                  <span class="arrow">↗</span>
+                  <span class="badge tone-a">Motion & systems</span>
+                  <span class="pill tiny">5 min read</span>
                 </div>
                 <p class="blog-title">Scoring expressive hero motion</p>
-                <p class="blog-desc">How I choreograph gradients, parallax, and easing without hurting performance.</p>
+                <p class="blog-desc">Gradients, parallax, and easing that stay smooth under pressure.</p>
               </a>
-              <a class="blog-card" href="https://example.com/blog/design-handoff" target="_blank" rel="noreferrer noopener">
+              <a class="blog-card" style="--bg:url('https://images.unsplash.com/photo-1522199710521-72d69614c702?auto=format&fit=crop&w=900&q=80')" href="https://example.com/blog/design-handoff" target="_blank" rel="noreferrer noopener">
                 <div class="blog-meta">
-                  <span class="badge">Product craft</span>
-                  <span class="arrow">↗</span>
+                  <span class="badge tone-b">Product craft</span>
+                  <span class="pill tiny">6 min read</span>
                 </div>
                 <p class="blog-title">Design-to-dev handoff that actually lands</p>
                 <p class="blog-desc">Reusable specs, tokens, and rituals that keep teams building the same story.</p>
               </a>
-              <a class="blog-card" href="https://example.com/blog/creative-dev" target="_blank" rel="noreferrer noopener">
+              <a class="blog-card" style="--bg:url('https://images.unsplash.com/photo-1451186859696-371d9477be93?auto=format&fit=crop&w=900&q=80')" href="https://example.com/blog/creative-dev" target="_blank" rel="noreferrer noopener">
                 <div class="blog-meta">
-                  <span class="badge">Creative coding</span>
-                  <span class="arrow">↗</span>
+                  <span class="badge tone-c">Creative coding</span>
+                  <span class="pill tiny">4 min read</span>
                 </div>
                 <p class="blog-title">Minimal stacks for playful web scenes</p>
                 <p class="blog-desc">Lessons from shipping lean, animation-heavy sites without bloat.</p>
