--- a/index.html
+++ b/index.html
@@ -16,22 +16,49 @@
     <div class="mountain" aria-hidden="true"></div>
     <div class="header-shell">
       <div class="intro">
-        <p class="eyebrow">Product designer · Creative developer</p>
-        <h1>Hi, I'm <span class="accent">Rohan Kumar</span></h1>
-        <p class="lede">I shape digital stories through thoughtful design systems, expressive visuals, and code that feels as friendly as it looks.</p>
+        <p class="eyebrow">Software developer · Project manager</p>
+        <h1>Hi, I'm <span class="accent">Amir Adamov</span></h1>
+        <p class="lede">I'm a hands-on engineer who writes code, breaks servers, fixes them, and coordinates teams, timelines, and roadmaps—bridging engineering and project management.</p>
         <div class="chips">
-          <span class="chip">UX craft</span>
-          <span class="chip">Design systems</span>
-          <span class="chip">Web animation</span>
+          <span class="chip">DevOps Firefighter</span>
+          <span class="chip">Backend Wizard</span>
+          <span class="chip">Database Therapist</span>
+          <span class="chip">AWS Adventurer</span>
+          <span class="chip">Infrastructure Magician</span>
+          <span class="chip">Chaos Coordinator</span>
+          <span class="chip">Project Juggler</span>
+          <span class="chip">Roadmap Architect</span>
         </div>
         <div class="cta-row">
           <a class="btn primary" href="#journey">View my progress</a>
-          <a class="btn ghost" href="mailto:hello@rohankumar.dev">Email me</a>
+          <a class="btn ghost" href="adamov.aamir@gmail.com">Email me</a>
         </div>
       </div>
-      <div class="portrait-frame" aria-hidden="true">
-        <div class="halo"></div>
-        <img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?auto=format&fit=crop&w=900&q=80" alt="Portrait of Rohan Kumar" />
+      <div class="portrait-column">
+        <div class="portrait-frame" aria-hidden="true">
+          <div class="halo"></div>
+          <img src="img/photo_2025-10-01_18-51-35.jpg" alt="Portrait of Amir Adamov" />
+        </div>
+        <div class="social-links" aria-label="Social links">
+          <a class="social" href="https://www.instagram.com/amir_adamov/" target="_blank" rel="noreferrer noopener">
+            <span class="icon" aria-hidden="true">
+              <svg viewBox="0 0 24 24" role="presentation">
+                <rect x="3" y="3" width="18" height="18" rx="5" ry="5"></rect>
+                <circle cx="12" cy="12" r="4.2"></circle>
+                <circle cx="17.2" cy="6.8" r="1.2"></circle>
+              </svg>
+            </span>
+            <span>Instagram</span>
+          </a>
+          <a class="social" href="https://github.com/amiradamov" target="_blank" rel="noreferrer noopener">
+            <span class="icon" aria-hidden="true">
+              <svg viewBox="0 0 24 24" role="presentation">
+                <path d="M12 2C7.03 2 3 6.03 3 11c0 3.98 2.58 7.35 6.16 8.55.45.08.61-.2.61-.43 0-.21-.01-.9-.01-1.63-2.25.49-2.72-.55-2.89-1.06-.1-.26-.54-1.07-.92-1.29-.31-.17-.75-.6-.01-.61.69-.01 1.19.63 1.35.9.79 1.32 2.06.95 2.57.72.08-.57.31-.95.56-1.17-2-.23-4.1-1-4.1-4.44 0-.98.35-1.79.92-2.42-.09-.23-.4-1.15.09-2.39 0 0 .75-.24 2.45.92a8.53 8.53 0 0 1 4.46 0c1.7-1.17 2.45-.92 2.45-.92.49 1.24.18 2.16.09 2.39.57.63.92 1.44.92 2.42 0 3.45-2.11 4.2-4.12 4.43.32.28.61.82.61 1.66 0 1.2-.01 2.17-.01 2.47 0 .24.16.52.62.43A9.02 9.02 0 0 0 21 11c0-4.97-4.03-9-9-9Z"></path>
+              </svg>
+            </span>
+            <span>GitHub</span>
+          </a>
+        </div>
       </div>
     </div>
   </header>
@@ -40,8 +67,8 @@
     <section class="timeline-section" id="journey">
       <div class="section-heading">
         <p class="eyebrow">Progress</p>
-        <h2>Milestones that shaped my craft</h2>
-        <p class="muted">A vertical snapshot of roles, projects, and experiments. Swap the content array in <code>script.js</code> to paste your story and scale as you grow.</p>
+        <h2>Recent Chaos I Call Progress</h2>
+        <p class="muted">A curated list of projects I have engineered, scaled, debugged, and delivered—often ahead of schedule.</p>
       </div>
 
       <div class="timeline-grid">
@@ -49,32 +76,10 @@
           <div class="summary-card">
             <p class="eyebrow">Latest writing</p>
             <h3>Ideas I keep revisiting</h3>
-            <p class="muted">Swap in your own URL, title, and short blurb. The darker overlays keep every headline readable.</p>
-            <div class="blog-links">
-              <a class="blog-card" style="--bg:url('https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&w=900&q=80')" href="https://example.com/blog/motion-systems" target="_blank" rel="noreferrer noopener">
-                <div class="blog-meta">
-                  <span class="badge tone-a">Motion & systems</span>
-                  <span class="pill tiny">5 min read</span>
-                </div>
-                <p class="blog-title">Scoring expressive hero motion</p>
-                <p class="blog-desc">Gradients, parallax, and easing that stay smooth under pressure.</p>
-              </a>
-              <a class="blog-card" style="--bg:url('https://images.unsplash.com/photo-1522199710521-72d69614c702?auto=format&fit=crop&w=900&q=80')" href="https://example.com/blog/design-handoff" target="_blank" rel="noreferrer noopener">
-                <div class="blog-meta">
-                  <span class="badge tone-b">Product craft</span>
-                  <span class="pill tiny">6 min read</span>
-                </div>
-                <p class="blog-title">Design-to-dev handoff that actually lands</p>
-                <p class="blog-desc">Reusable specs, tokens, and rituals that keep teams building the same story.</p>
-              </a>
-              <a class="blog-card" style="--bg:url('https://images.unsplash.com/photo-1451186859696-371d9477be93?auto=format&fit=crop&w=900&q=80')" href="https://example.com/blog/creative-dev" target="_blank" rel="noreferrer noopener">
-                <div class="blog-meta">
-                  <span class="badge tone-c">Creative coding</span>
-                  <span class="pill tiny">4 min read</span>
-                </div>
-                <p class="blog-title">Minimal stacks for playful web scenes</p>
-                <p class="blog-desc">Lessons from shipping lean, animation-heavy sites without bloat.</p>
-              </a>
+            <p class="muted">Here are some of my ideas, blogs, and maybe even papers that I have posted over the years.</p>
+            <div class="blog-links"></div>
+            <div class="blog-footer">
+              <a class="btn ghost" href="blogs.html">All posts</a>
             </div>
           </div>
           <div class="summary-badges">
@@ -95,7 +100,7 @@
   </main>
 
   <footer class="footer">
-    <p>Built with empathy and curiosity. © Rohan Kumar</p>
+    <p>Built with empathy and curiosity. © Amir Adamov</p>
     <a class="back-to-top" href="#top">Back to top ↑</a>
   </footer>
 
