--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rohan Kumar | Product Designer & Engineer</title>
+  <title>Amir Adamov | Product Software developer · Project manager</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="img/ls.jpg">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header class="masthead" id="top">
+    <div class="wallpaper-stack" aria-hidden="true"></div>
     <div class="glow blur-one" aria-hidden="true"></div>
     <div class="glow blur-two" aria-hidden="true"></div>
     <div class="mountain" aria-hidden="true"></div>
