--- a/404.html
+++ b/404.html
@@ -28,6 +28,10 @@
         <a class="btn ghost" href="blogs.html">View all blogs</a>
       </div>
     </div>
+
+    <div class="not-found-footer">
+      <span>Still lost? <a href="mailto:hello@rohankumar.dev">Email me</a> and I'll point you in the right direction.</span>
+    </div>
   </div>
 </body>
 </html>
