--- a/404.html
+++ b/404.html
@@ -9,6 +9,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&family=Playfair+Display:wght@600;700&display=swap"
     rel="stylesheet">
+  <link rel="icon" type="image/png" href="img/ls.jpg">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="not-found-page">
