--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="cta-row">
           <a class="btn primary" href="#journey">View my progress</a>
-          <a class="btn ghost" href="adamov.aamir@gmail.com">Email me</a>
+          <a class="btn ghost" href="mailto:adamov.aamir@gmail.com">Email me</a>
         </div>
       </div>
       <div class="portrait-column">
